pagina di about

--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@ group: navigation
 
 ===
 
-Sono Roberto e questa &egrave; il mio personale contenitore di WTF
+Sono Roberto e questa è il mio personale contenitore di WTF
 
 
