pagina di about

--- a/about.html
+++ b/about.html
@@ -6,4 +6,17 @@ group: navigation
 ---
 {% include JB/setup %}
 
-Sono Roberto e questa è il mio personale contenitore di WTF
+
+<h2 class="lead">
+    Sono Roberto e questo è il mio personale contenitore di <a href="http://www.urbandictionary.com/define.php?term=wtf" target="_blank">WTF</a>
+</h2>
+
+<h3 class="lead">dormo <strong>poco</strong> e <strong>spesso</strong></h3>
+
+
+<ul class="unstyled">
+    <li>Ricevo lettere <a href="mailto:{{ site.author.email }}?subject=caroamicotiscrivo"><strong>qui</strong></a></li>
+    <li>Scrivo cose su Twitter come <a href="http://www.twitter.com/{{ site.author.twitter}}" target="_blank">@{{site.author.twitter}}</a><br></li>
+</ul>
+
+
